@@ -9,8 +9,10 @@ use File::BOM qw(open_bom);
 
 our $VERSION = '0.32';
 
-# Replace Text::Markup::Markdown.
-Text::Markup->register( markdown => qr{m(?:d(?:own)?|kdn?|arkdown)} );
+sub import {
+    # Replace Text::Markup::Markdown.
+    Text::Markup->register( markdown => $_[1] || qr{m(?:d(?:own)?|kdn?|arkdown)} );
+}
 
 sub parser {
     my ($file, $encoding, $opts) = @_;
@@ -82,6 +84,11 @@ It recognizes files with the following extensions as CommonMark Markdown:
 =item F<.markdown>
 
 =back
+
+To change it the files it recognizes, load this module directly and pass a
+regular expression matching the desired extension(s), like so:
+
+  use Text::Markup::CommonMark qr{markd?};
 
 Normally this module returns the output wrapped in a minimal HTML document
 skeleton. If you would like the raw output without the skeleton, you can pass
