@@ -3,8 +3,14 @@ package Text::Markup::HTML;
 use 5.8.1;
 use strict;
 use warnings;
+use Text::Markup;
 
 our $VERSION = '0.32';
+
+sub import {
+    # Replace the regex if passed one.
+    Text::Markup->register( html => $_[1] ) if $_[1];
+}
 
 sub parser {
     my ($file, $encoding, $opts) = @_;
@@ -46,6 +52,11 @@ with no decoding. It recognizes files with the following extensions as HTML:
 =item F<.xhtm>
 
 =back
+
+To change it the files it recognizes, load this module directly and pass a
+regular expression matching the desired extension(s), like so:
+
+  use Text::Markup::HTML qr{hachetml};
 
 =head1 Author
 
