@@ -3,10 +3,16 @@ package Text::Markup::Mediawiki;
 use 5.8.1;
 use strict;
 use warnings;
+use Text::Markup;
 use File::BOM qw(open_bom);
 use Text::MediawikiFormat 1.0;
 
 our $VERSION = '0.32';
+
+sub import {
+    # Replace the regex if passed one.
+    Text::Markup->register( mediawiki => $_[1] ) if $_[1];
+}
 
 sub parser {
     my ($file, $encoding, $opts) = @_;
@@ -65,6 +71,10 @@ It recognizes files with the following extensions as MediaWiki:
 
 =back
 
+To change it the files it recognizes, load this module directly and pass a
+regular expression matching the desired extension(s), like so:
+
+  use Text::Markup::Mediawiki qr{kwiki?};
 
 Text::Markup::Mediawiki supports the two
 L<Text::MediawikiFormat arguments|Text::MediawikiFormat/format>, a hash
