@@ -3,6 +3,7 @@ package Text::Markup::None;
 use 5.8.1;
 use strict;
 use warnings;
+use Text::Markup;
 use HTML::Entities;
 use File::BOM qw(open_bom);
 
